Fix Say-hi visibility.

--- a/_sass/case-studies/cities-at-night/_navbar.scss
+++ b/_sass/case-studies/cities-at-night/_navbar.scss
@@ -45,6 +45,7 @@
     background-color: rgba(0,0,0,.85);
     width: 100%;
     display: none;
+    visibility: hidden;
     }
 
     .btn-hi{
